--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> hello coursera !</title>
 </head>
-<body><h1> hello coursera !</h1>
+<body><h1> hello coursera ! it’s amer </h1>
 
 </body>
 </html>
